# graphics

./: 计算机图形学导论.md  计算机视觉导论.md
code/: CMakeLists.txt
code/Rasterizer/: main.cpp  rasterizer.cpp
code/Rasterizer2/: Triangle.cpp  main.cpp  rasterizer.cpp
code/Rasterizer3/: main.cpp  rasterizer.cpp
code/Transformation/: Transformation.cpp
